@@ -92,10 +92,10 @@ public class SensorLink extends BusinessEntity {
      }
      StringBuffer sb = new StringBuffer();
      sb.append("<link type=\"sensor\" ref=\"" + sensorDTO.getOffsetId() + "\">");
-     if (sensorDTO.getStateNames() != null) {
-       for (String stateName : sensorDTO.getStateNames()) {
-         sb.append("<state name=\"" + stateName + "\" value=\"" + getStateValueByStateName(stateName) + "\"/>");
-       }
+     if (linkerChildren != null) {
+       for (LinkerChild child : linkerChildren) {
+         sb.append(child.toString());
+      }
      }
      sb.append("</link>");
      return sb.toString();
